--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       display: none;
       color: #4ade80;
       margin-top: 1rem;
+      font-size: 1rem;
     }
   </style>
 </head>
@@ -70,11 +71,16 @@
   <div class="container">
     <h1>🚀 Join the Future</h1>
     <p>Stay ahead with weekly insights on AI, automation, and smarter workflows. No fluff. Just useful tools + ideas.</p>
+    
     <form id="signup-form">
-      <input type="email" name="email" id="email" placeholder="Enter your email" required />
+      <input type="email" name="email" placeholder="Enter your email" required />
       <button type="submit">→ Get the Insights</button>
     </form>
-    <div id="success-message">✅ You're in! Check your inbox soon.</div>
+
+    <div id="success-message">
+      ✅ You're in! Check your inbox soon.
+    </div>
+
     <div class="footer">
       Built for builders, tinkerers, and the AI-curious. ⚡
     </div>
@@ -83,32 +89,29 @@
   <script>
     const form = document.getElementById('signup-form');
     const successMessage = document.getElementById('success-message');
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwT9nIJxDYu73w4VK8TdYW-HVRYC_Ba_vdTlzChRVamiNAMNsfyVPVSgF-l8qMWMQQb/exec'; // Replace with your actual URL
 
     form.addEventListener('submit', async function (e) {
       e.preventDefault();
-      const email = document.getElementById('email').value;
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbwT9nIJxDYu73w4VK8TdYW-HVRYC_Ba_vdTlzChRVamiNAMNsfyVPVSgF-l8qMWMQQb/exec'; // Replace this
+
+      const formData = new FormData(form);
 
       try {
-        await fetch(scriptURL, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-          body: new URLSearchParams({ email })
-        });
-
-        // Clear the form
-        form.reset();
+        await fetch(scriptURL, { method: 'POST', body: formData });
 
         // Show success message
         successMessage.style.display = 'block';
 
-        // Hide after 2 seconds
+        // Clear form
+        form.reset();
+
+        // Hide success after 2 seconds
         setTimeout(() => {
           successMessage.style.display = 'none';
         }, 2000);
       } catch (error) {
         alert('Oops! Something went wrong.');
-        console.error('Error!', error.message);
+        console.error('Submission error:', error);
       }
     });
   </script>
