--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
       font-size: 1rem;
       cursor: pointer;
       width: 100%;
-      transition: background-color 0.3s ease;
     }
     button:hover {
       background-color: #2563eb;
@@ -60,17 +59,9 @@
       font-size: 0.85rem;
       color: #94a3b8;
     }
-    #success-message {
-      display: none;
-      color: #4ade80;
+    #message {
       margin-top: 1rem;
       font-size: 1rem;
-      transition: opacity 0.3s ease;
-    }
-    #loading-indicator {
-      margin-top: 0.5rem;
-      font-size: 0.95rem;
-      color: #60a5fa;
       display: none;
     }
   </style>
@@ -85,8 +76,7 @@
       <button type="submit" id="submit-btn">→ Get the Insights</button>
     </form>
 
-    <div id="loading-indicator">Submitting…</div>
-    <div id="success-message">✅ You're in! Check your inbox soon.</div>
+    <div id="message"></div>
 
     <div class="footer">
       Built for builders, tinkerers, and the AI-curious. ⚡
@@ -95,33 +85,34 @@
 
   <script>
     const form = document.getElementById('signup-form');
-    const successMessage = document.getElementById('success-message');
-    const loadingIndicator = document.getElementById('loading-indicator');
+    const messageBox = document.getElementById('message');
     const submitBtn = document.getElementById('submit-btn');
     const scriptURL = 'https://script.google.com/macros/s/AKfycbwT9nIJxDYu73w4VK8TdYW-HVRYC_Ba_vdTlzChRVamiNAMNsfyVPVSgF-l8qMWMQQb/exec';
 
     form.addEventListener('submit', async function (e) {
       e.preventDefault();
 
-      // UI feedback
+      // Show "Submitting…" instantly
       submitBtn.disabled = true;
-      loadingIndicator.style.display = 'block';
+      messageBox.style.display = 'block';
+      messageBox.style.color = '#facc15'; // yellow
+      messageBox.textContent = 'Submitting…';
 
       const formData = new FormData(form);
 
       try {
         await fetch(scriptURL, { method: 'POST', body: formData });
 
-        // Success UI
-        loadingIndicator.style.display = 'none';
-        successMessage.style.display = 'block';
+        messageBox.style.color = '#4ade80'; // green
+        messageBox.textContent = "✅ You're in! Check your inbox soon.";
         form.reset();
 
         setTimeout(() => {
-          successMessage.style.display = 'none';
+          messageBox.style.display = 'none';
         }, 2000);
       } catch (error) {
-        alert('Oops! Something went wrong.');
+        messageBox.style.color = '#f87171'; // red
+        messageBox.textContent = 'Oops! Something went wrong.';
         console.error('Submission error:', error);
       } finally {
         submitBtn.disabled = false;
